# advent-of-code

./: LICENSE.txt  README.md
2016/: day-11.py  day-12.py  day-23.py
2016/common/: input.py
2024/: .gitignore  Cargo.toml
2024/src/: lib.rs  main.rs
2024/src/template/: aoc_cli.rs  day.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
