[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Danny Mösch <danny.moesch@icloud.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["dep:chrono"]

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
nom = "7.1.3"
itertools = "0.13.0"
regex = "1.11.1"
